syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// todo подумай все ли ок тут в пакете ???
option go_package = "github.com/Insid1/go-auth-user/services/user;user_v1";

service UserV1 {
  rpc Create(CreateReq) returns (CreateRes);
  rpc Get(GetReq) returns (GetRes);
  rpc Update(UpdateReq) returns (UpdateRes);
  rpc Delete(DeleteReq) returns (DeleteRes);
}

message User {
  string id = 1;
  uint32 username = 2;
  string email = 3;
  google.protobuf.StringValue name = 4; // means it may not exist
  string password_hash = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetReq {
  string id = 1;
  string email = 2;
}

message GetRes { User user = 1; }

message CreateReq { User user = 1; }

message CreateRes { string id = 1; }

message DeleteReq { string id = 1; }

message DeleteRes { string id = 1; }

message UpdateReq { User user = 1; }

message UpdateRes { User user = 1; }